@@ -1,3 +1,12 @@
+2011-08-14  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* spherula.C:
+	Add function make_std().
+
+	* tringula.C:
+	Improve sphere legendrification: new factors, no loops, use
+	const-theta mesh and multi-legendrification.
+
 2011-07-10  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* spherula.C:
